# DNA-with-a-Twist

./: .gitignore  DNATWIST_ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
Agent Architecture Build/: AGENT_BACKEND.md  AGENT_FRONTEND.md  AGENT_REVIEWER.md  ARCHITECTURE.md  COORDINATOR_PLAYBOOK.md
QC Reports/: 2026-05-06-full-code-review.md
apps/api/: Dockerfile  auth.py  canonical.py  fly.toml  main.py  pyproject.toml
apps/api/ingestion/: fasta.py  fastq.py  pdb.py  storage.py
apps/api/models/: db.py
apps/api/pipeline/: research_object.py  run.py
apps/api/routers/: research_objects.py  runs.py  uploads.py
apps/api/scoring/: cfd.py  doench_rs2.py  doench_rs2_weights.py  pam.py
apps/web/: .env.example  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/__tests__/: DeterminismBadge.test.tsx  Hash.test.tsx  useRunEvents.test.ts
apps/web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
apps/web/app/(protected)/: layout.tsx
apps/web/app/examples/: layout.tsx  page.tsx
apps/web/components/: MobileNav.tsx  NavBar.tsx  QueryProvider.tsx  SideNav.tsx
apps/web/lib/: api.ts  design-tokens.ts  example-fixtures.ts  getApiClient.ts  mockApi.ts  realApi.ts  types.ts
supabase/migrations/: 20260501000001_create_research_objects.sql  20260501000002_create_runs.sql  20260501000003_create_provenance_events.sql  20260501000004_create_results.sql  20260501000005_enable_rls.sql  20260501000006_create_uploads.sql
tests/: conftest.py  test_canonical_hash.py  test_content_hash_allowlist.py  test_event_sequence.py  test_export_pack.py  test_provenance_append_only.py  test_replay.py  test_research_objects.py  test_scoring.py  test_uploads.py
tests/fixtures/: BCL11A_enhancer.fasta  README.md
(+24 files in other folders)
